<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login_signup">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/new_postname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="100dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_postname"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />


        <EditText
            android:id="@+id/new_posttext"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/write_post"

            android:padding="10dp"
            android:inputType="textMultiLine"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:gravity="top"/>




        <Button
            android:id="@+id/submit_new_post_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/btn_login_signup"
            android:text="@string/submit_the_post"
            android:textColor="@color/white" />



    </LinearLayout>
</RelativeLayout>